Remove HeapUsageSupplier from ClusterPlugin interface